plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.kakao.togetherclone'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
	//lombok
	maven { url "https://plugins.gradle.org/m2/"}
	maven { url 'https://jitpack.io' }
}

dependencies {
	// 스프링 부트 초기화
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.mysql:mysql-connector-j'
//	implementation 'com.h2database:h2'
	compileOnly 'org.projectlombok:lombok:1.18.28'
	annotationProcessor 'org.projectlombok:lombok:1.18.28'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testCompileOnly 'org.projectlombok:lombok:1.18.28'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'mysql:mysql-connector-java:8.0.26'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    // jwt관련 라이브러리
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	implementation("com.googlecode.json-simple:json-simple:1.1.1")
	implementation("com.google.code.gson:gson:2.8.5")
	implementation("org.springframework.boot:spring-boot-starter-data-redis:2.7.18")

	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers'

	implementation 'org.jsoup:jsoup:1.21.1'

	implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0")

	implementation("net.datafaker:datafaker:2.4.2")

	implementation("org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE")
}

sourceSets {
	main {
		java {
			// 'prod' 프로퍼티로 빌드할 경우 mock 패키지 제외
			if (project.hasProperty('prod')) {
				exclude '**/mock/**'
			}
		}
	}
}

test {
	useJUnitPlatform()
	systemProperty("spring.profiles.active", "test")
}
